# workshop-data-modeling

./: README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
docs/: docusaurus.config.ts
docs/docs/: readme.mdx
docs/docs/lab1/: explore.mdx  load_data.mdx  setup.mdx  start.mdx
docs/docs/lab2/: load_data.mdx  start.mdx
docs/docs/lab3/: interfacel2.mdx  interfacerole.mdx  setup.mdx
workshop_b2/: models.py
workshop_b2/lab1/: main.py
workshop_b2/lab2/: main.py
workshop_b2/lab3/data/: 01_site.yml  02_prefix.yml  03_device.yml  04_interface_l3.yml  05_ipaddress.yml  interface_l3_role.yml
workshop_b2/lab3/data_interface_l2/: interface_l2.yml
workshop_b2/lab3/schemas/: dcim.yml  interface_l2.yml.bak  ipam.yml  location.yml
